# MoneyHook-ML

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/: predict.py
app/models/: category_model.pkl  category_model.py
app/schemas/: prediction.py
app/services/: model_service.py
ml/category/: category_classification_master.csv  category_master.csv  category_model.py  category_training_data.csv
